[package]
name = "sentinel"
version = "0.0.3"
authors = ["MuZhou233 <muzhou233@outlook.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
anyhow = "1.0"
log = "0.4.14"
structopt = "0.3"
walkdir = "2"
tuihub-protos = { git = "https://github.com/TuiHub/Protos", version = "0.2.14", features = ["librarian-sephirah-v1"] }
fancy-regex = "0.11.0"
boon = "0.5.0"
serde_json = "1.0.95"
serde = "1.0.159"
zip = "0.6.4"

[build-dependencies]
tonic-build = "0.8.4"

[profile.release]
lto = true
strip = true
panic = "abort"
