[package]
name = "sentinel"
version = "0.0.4"
authors = ["MuZhou233 <muzhou233@outlook.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "5.0.0"
fancy-regex = "0.11.0"
glob = "0.3.1"
jsonschema = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.17.1"
serde = "1.0.159"
serde_json = "1.0.95"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8"
tuihub-protos = { git = "https://github.com/TuiHub/Protos", version = "0.2.14", features = ["librarian-sephirah-v1"] }
walkdir = "2"
zip = "0.6.4"

[build-dependencies]
tonic-build = "0.8.4"

[profile.release]
lto = true
strip = true
panic = "abort"
